--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "apexcharts": "3.35.5",
+    "axios": "^1.6.5",
     "flowbite-react": "^0.7.2",
     "framer-motion": "^7.10.2",
+    "json-bigint": "^1.0.0",
     "react": "^18.2.0",
     "react-apexcharts": "1.4.0",
     "react-calendar": "^3.9.0",
